<resources>
    <string name="app_name">SAP Codelab</string>
    <string name="action_show_all">Show All</string>
    <string name="action_show_open">Show Open</string>
    <string name="memo_title">Title</string>
    <string name="new_memo">New Memo</string>
    <string name="view_memo">View Memo</string>
    <string name="memo_text">Text</string>
    <string name="memo_longitude">Longitude</string>
    <string name="memo_latitude">Latitude</string>
    <string name="button_get_location">Get Location</string>
    <string name="map_title">Location</string>
    <string name="action_save">Save</string>
    <string name="memo_title_empty_error">Please provide a title for this memo</string>
    <string name="memo_text_empty_error">Please provide a memo description</string>
    <string name="memo_location_empty_error">Please provide location</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_settings">Settings</string>
    <string name="permissions_not_granted">Permissions not granted</string>
    <string name="empty" />
    <string name="permission_dialog_rationale_title">Permits required</string>
    <string name="permission_dialog_rationale_message">To select a location on the map and receive notifications when you approach it, the app requires access to your location and permission to send notifications. Please grant these permissions.</string>
    <string name="permission_dialog_rationale_positive_button">OK</string>
    <string name="permission_dialog_rationale_negative_button">Cancel</string>
    <string name="permission_dialog_settings_title">The permits were denied</string>
    <string name="permission_dialog_settings_message">You previously denied the permission request. To use this feature, you must manually enable it in the app settings.</string>
    <string name="permission_dialog_settings_positive_button">Settings</string>
    <string name="permission_dialog_settings_negative_button">Cancel</string>
    <string name="permission_dialog_rationale_message_notification">To receive timely alerts when you are approaching a memo, the app requires permission to send notifications. Please grant this permission.</string>

</resources>
